# deltadb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: config.hpp.in  server.cpp
src/console/: ascii.hpp  console.cpp  console.hpp
src/db/: block.cpp  block.hpp  database.cpp  database.hpp  table.cpp  table.hpp  table_col.cpp  table_col.hpp  table_row.cpp  table_row.hpp  types.hpp
src/internal/: bitfield.hpp  bitstream.hpp  filesystem.hpp  platform.hpp
